@@ -276,9 +276,6 @@ subfactory_info=Subfactory Info
 no_subfactory=no subfactory selected
 subfactory_needs_repair=This subfactory has become invalid because the set of active mods has changed. You can resolve this by either repairing it, or by re-activating the missing mods. Repairing removes everything that has become invalid.
 repair_subfactory=Repair subfactory
-utility=Utility
-view_utilities=View Utilities
-notes=Notes
 timescale=Timescale
 timescale_tt=The timescale sets how quickly items are produced. For example, selecting [font=default-bold]1m[/font] and adding a product of 400 green circuits means you want to produce 400 circuits [font=default-bold]per minute[/font].
 mining_productivity=Mining productivity
@@ -289,7 +286,7 @@ solver_choice_tt=Choose which of the solvers to use for this subfactory. The tra
 solver_choice_traditional=Traditional
 solver_choice_matrix=Matrix
 solver_choice_configure=Configure the matrix solver
-subfactory_modset_changes=Your active mods changed:
+subfactory_modset_changes=Your active mods changed.
 subfactory_mod_removed=\n\n[color=#FF3333][font=default-bold]These mods were removed:[/font][/color]
 subfactory_mod_added=\n\n[color=#33CC33][font=default-bold]These mods were added:[/font][/color]
 subfactory_mod_updated=\n\n[color=#CCCC00][font=default-bold]These mods were updated:[/font][/color]
@@ -307,10 +304,9 @@ items_per_second_per_machine=Sets the number on item buttons to how many of them
 refresh_production=Refresh the production table below\n- Press __CONTROL__fp_refresh_production__ to refresh -
 production=Production
 level=Level
-floor_up=Go up
 floor_up_tt=Go up a floor level\n- Press __CONTROL__fp_floor_up__ to go up-
-floor_top=To the top
 floor_top_tt=Go the the top floor
+utility_dialog_tt=Open the utility dialog
 production_instruction_subfactory=Add a subfactory by clicking the green ’+’-button in the top left
 production_instruction_product=Add a product by clicking the gray ’+’-button in the products-box above
 production_instruction_recipe=Add a recipe by left-clicking the product in the products-box above
